--- a/recipes/hpo-CxD-hetionet-fold2-subset-with-inverse-complex-both.yaml
+++ b/recipes/hpo-CxD-hetionet-fold2-subset-with-inverse-complex-both.yaml
@@ -1,7 +1,6 @@
 job.type: search
 search.type: ax
-search.on_error: continue
-dataset.name: hetionet-fold1-full-with-inverse
+dataset.name: hetionet-fold2-subset-with-inverse
 
 train:
   max_epochs: 400
@@ -9,24 +8,23 @@ train:
 
 valid:
   every: 2
-  metric: mean_reciprocal_rank_filtered_with_test
+  metric: mrr_avg_val
   early_stopping:
     patience: 3
 
-
-
+eval:
+  type: MyJob #CxDRankingHetionetAvg
 
 user:
-  fold: 1
-  dataset_variant: full-with-inverse
+  fold: 2
+  dataset_variant: subset-with-inverse
+  dataset: hetionet
+
+# Settings for reciprocal relations (if used)
+modules: [kge.job, kge.model, kge.model.embedder]
+import: [MyFile]
 
 model: complex
-
-entity_ranking:
-  filter_with_test: True
-  hits_at_k_s: [1, 3, 5, 10, 20]
-  metrics_per:
-    head_and_tail: True
 
 # Ax settings: hyperparameter search space
 ax_search:
