--- a/recipes/hpo-CxD-drkg-full-with-inverse-distmult-both.yaml
+++ b/recipes/hpo-CxD-drkg-full-with-inverse-distmult-both.yaml
@@ -14,8 +14,10 @@ valid:
   early_stopping:
     patience: 3
 
+import: [MyFile]
+
 eval:
-  type: CxDRankingHetionetAvg
+  type: MyJob
 
 user:
   dataset: drkg
