--- a/recipes/hpo-CxD-drkg-full-with-inverse-transe-both.yaml
+++ b/recipes/hpo-CxD-drkg-full-with-inverse-transe-both.yaml
@@ -15,7 +15,7 @@ valid:
     patience: 3
 
 eval:
-  type: CxDRankingHetionetAvg
+  type: MyJob
 
 user:
   dataset: drkg
@@ -23,7 +23,7 @@ user:
 
 model: transe
 
-
+import: [MyFile]
 # Ax settings: hyperparameter search space
 ax_search:
   num_trials: 30
