--- a/recipes/hpo-CxD-drkg-noana-with-inverse-complex-both.yaml
+++ b/recipes/hpo-CxD-drkg-noana-with-inverse-complex-both.yaml
@@ -14,7 +14,7 @@ valid:
     patience: 3
 
 eval:
-  type: MyJob #CxDRankingHetionetAvg
+  type: MyJob 
 
 user:
   dataset_variant: noana-with-inverse
