--- a/recipes/hpo-CxD-hetionet-fold1-full-with-inverse-rescal-both.yaml
+++ b/recipes/hpo-CxD-hetionet-fold1-full-with-inverse-rescal-both.yaml
@@ -14,7 +14,7 @@ valid:
     patience: 3
 
 eval:
-  type: CxDRankingHetionetAvg
+  type: MyJob
 
 user:
   fold: 1
@@ -22,7 +22,7 @@ user:
 
 model: rescal
 
-
+import: [MyFile]
 # Ax settings: hyperparameter search space
 ax_search:
   num_trials: 30
