--- a/recipes/hpo-CxD-drkg-full-with-inverse-conve-both.yaml
+++ b/recipes/hpo-CxD-drkg-full-with-inverse-conve-both.yaml
@@ -15,11 +15,13 @@ valid:
     patience: 3
 
 eval:
-  type: CxDRankingHetionetAvg
+  type: MyJob
 
 user:
   dataset: drkg
   dataset_variant: full-with-inverse
+
+import: [MyFile]
 
 model: reciprocal_relations_model
 reciprocal_relations_model.base_model.type: conve # redundant since also default
