--- a/recipes/hpo-CxD-drkg-full-with-inverse-rescal-both.yaml
+++ b/recipes/hpo-CxD-drkg-full-with-inverse-rescal-both.yaml
@@ -15,7 +15,7 @@ valid:
     patience: 3
 
 eval:
-  type: CxDRankingHetionetAvg
+  type: MyJob
 
 user:
   dataset: drkg
@@ -23,6 +23,7 @@ user:
 
 model: rescal
 
+import: [MyFile]
 # Ax settings: hyperparameter search space
 ax_search:
   num_trials: 30
