--- a/recipes/hpo-CxD-drkg-nogene-with-inverse-complex-both.yaml
+++ b/recipes/hpo-CxD-drkg-nogene-with-inverse-complex-both.yaml
@@ -13,7 +13,7 @@ valid:
     patience: 3
 
 eval:
-  type: MyJob #CxDRankingHetionetAvg
+  type: MyJob 
 
 user:
   dataset_variant: nogene-with-inverse
